--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   flutter_masked_text: ^0.7.0
   mask_text_input_formatter: ^1.0.7
   path_provider: ^1.6.21
+  geolocator: ^6.0.0+4
+
 
 dev_dependencies:
   flutter_test:
@@ -56,6 +58,7 @@ flutter:
   assets:
     - loadjson/itens.json
     - images/baixados.png
+    - images/carrinhobaby.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
