--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   flutter_masked_text: ^0.7.0
   mask_text_input_formatter: ^1.0.7
   path_provider: ^1.6.21
-  geocoder: ^0.2.1
+  geocoder: ^0.2.0
 
 
 dev_dependencies:
@@ -59,6 +59,7 @@ flutter:
     - loadjson/itens.json
     - images/baixados.png
     - images/carrinhobaby.jpg
+    - images/carrinhoselecionado.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
