--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,20 +23,24 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   google_sign_in: ^4.5.1
-  firebase_storage: ^3.1.6
-  firebase_auth: ^0.11.1+12
-  cloud_firestore: ^0.13.7
+  firebase_storage: ^4.0.1
+  firebase_auth: ^0.18.1+2
+  cloud_firestore: ^0.14.1+3
   scoped_model: ^1.0.1
   flutter_masked_text: ^0.7.0
   mask_text_input_formatter: ^1.0.7
   path_provider: ^1.6.21
   geocoder: ^0.2.0
+  firebase_core: ^0.5.0+1
+  date_format: ^1.0.9
 
 
 dev_dependencies:
