--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   geocoder: ^0.2.0
   firebase_core: ^0.5.0+1
   date_format: ^1.0.9
+  shared_preferences: ^0.5.12+2
 
 
 dev_dependencies:
