--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   firebase_core: ^0.5.0+1
   date_format: ^1.0.9
   shared_preferences: ^0.5.12+2
+  flutter_open_whatsapp: ^0.1.2
+  flutter_local_notifications: ^1.4.2
+  rxdart: ^0.23.1
 
 
 dev_dependencies:
