--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -40,7 +40,7 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.tss.fretego"
-        minSdkVersion 16
+        minSdkVersion 19
         multiDexEnabled true  //adicione para evitar o erro
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
@@ -69,4 +69,5 @@ dependencies {
     implementation "com.google.firebase:firebase-auth:19.3.2"
     implementation "com.google.firebase:firebase-firestore:21.6.0"
     implementation "com.google.firebase:firebase-storage:19.2.0"
+    implementation 'com.mercadopago.android.px:checkout:4.63.0'
 }
