--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,11 @@ dependencies:
   flutter_open_whatsapp: ^0.1.2
   flutter_local_notifications: ^1.4.2
   rxdart: ^0.23.1
+  mercado_pago_mobile_checkout: ^0.0.2
+  google_maps_flutter: ^1.0.6
+  intl: ^0.16.1
+  location: ^3.0.2
+  mercadopago_sdk: ^1.2.0
 
 
 dev_dependencies:
@@ -68,6 +73,7 @@ flutter:
     - images/baixados.png
     - images/carrinhobaby.jpg
     - images/carrinhoselecionado.png
+    - markerico.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
