--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -69,5 +69,5 @@ dependencies {
     implementation "com.google.firebase:firebase-auth:19.3.2"
     implementation "com.google.firebase:firebase-firestore:21.6.0"
     implementation "com.google.firebase:firebase-storage:19.2.0"
-    implementation 'com.mercadopago.android.px:checkout:4.63.0'
+    implementation 'com.mercadopago.android.px:checkout:4.+'
 }
