--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   mercadopago_sdk: ^1.2.0
   after_layout: ^1.0.7+2
   group_radio_button: ^1.0.1
+  responsive_flutter: ^0.0.4
 
 
 dev_dependencies:
@@ -89,6 +90,9 @@ flutter:
     - images/maps/markerdestino.png
     - images/maps/markerorigem.png
     - images/maps/truckerico.png
+    - images/popup/myboxes.png
+    - images/itensselect/anim/anim_caminhonete.png
+    - images/itensselect/anim/anim_roda.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
