--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -19,12 +19,17 @@
 
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="fretego"
+        android:label="Mude Já"
         android:icon="@mipmap/ic_launcher"
         >
 
+
+
         <meta-data android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyDoOclLuSyKtTf6jlGhWiHJnbXeMjYZ2NI"/>
+
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/> <activity android:name="com.facebook.FacebookActivity" android:configChanges= "keyboard|keyboardHidden|screenLayout|screenSize|orientation" android:label="@string/app_name" /> <activity android:name="com.facebook.CustomTabActivity" android:exported="true"> <intent-filter> <action android:name="android.intent.action.VIEW" /> <category android:name="android.intent.category.DEFAULT" /> <category android:name="android.intent.category.BROWSABLE" /> <data android:scheme="@string/fb_login_protocol_scheme" /> </intent-filter> </activity>
+
 
 
         <activity
@@ -49,7 +54,8 @@
                  Flutter's first frame. -->
             <meta-data
               android:name="io.flutter.embedding.android.SplashScreenDrawable"
-              android:resource="@drawable/launch_background"
+                android:resource="@drawable/splashscreenimg"
+
               />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
