--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,29 +31,32 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   google_sign_in: ^4.5.1
-  firebase_storage: ^4.0.1
-  firebase_auth: ^0.18.1+2
-  cloud_firestore: ^0.14.1+3
-  scoped_model: ^1.0.1
+  firebase_storage: ^8.0.2
+  firebase_auth: ^1.0.2
+  firebase_auth_web: ^1.0.4
+  cloud_firestore: ^1.0.4
+  firebase_core_platform_interface: ^4.0.0
+  scoped_model: ^1.1.0
   flutter_masked_text: ^0.7.0
   mask_text_input_formatter: ^1.0.7
-  path_provider: ^1.6.21
+  path_provider: ^2.0.1
   geocoder: ^0.2.0
-  firebase_core: ^0.5.0+1
+  firebase_core: ^1.0.3
   date_format: ^1.0.9
-  shared_preferences: ^0.5.12+2
+  location_web: ^3.0.0
+  shared_preferences: ^2.0.5
   flutter_open_whatsapp: ^0.1.2
-  flutter_local_notifications: ^1.4.2
+  flutter_local_notifications: ^5.0.0+1
   rxdart: ^0.23.1
-  mercado_pago_mobile_checkout: ^0.0.2
-  google_maps_flutter: ^1.0.6
-  intl: ^0.16.1
-  location: ^3.0.2
-  mercadopago_sdk: ^1.2.0
+  mercado_pago_mobile_checkout: ^0.0.3
+  google_maps_flutter: ^2.0.3
+  intl: 0.17.0
+  location: ^4.1.1
   after_layout: ^1.0.7+2
   group_radio_button: ^1.0.1
   responsive_flutter: ^0.0.4
-
+  flutter_facebook_login: ^3.0.0
+  http_parser: ^4.0.0
 
 dev_dependencies:
   flutter_test:
@@ -78,6 +81,7 @@ flutter:
     - images/carrinhoselecionado.png
     - markerico.png
     - images/home_backwall.png
+    - images/home_backwall_noeffect.png
     - images/home_boxes.png
     - images/home_couple.png
     - images/home_boxline.png
@@ -102,6 +106,9 @@ flutter:
     - images/itensselect/trucks/truck_pickupg.png
     - images/itensselect/trucks/truck_pickupp.png
     - images/itensselect/relogiopulso.png
+    - images/itensselect/date/calender.png
+    - images/itensselect/date/clock.png
+    - images/avalation/aval.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
